[workspace]
members = [
    "bencher",
    "cli",
    "error",
    "fuzz/*",
    "harness",
    "keys",
    "programs/*",
    "result",
    "test-programs/*",
]
resolver = "2"

[patches.crates-io]
agave-feature-set = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
solana-program-runtime = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/mollusk"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.3.0"

[workspace.dependencies]
agave-feature-set = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
agave-precompiles = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.38"
clap = "4.5.4"
criterion = "0.5.1"
ed25519-dalek = "=1.0.1"
libsecp256k1 = "0.6.0"
mollusk-svm = { path = "harness", version = "0.3.0" }
mollusk-svm-bencher = { path = "bencher", version = "0.3.0" }
mollusk-svm-cli = { path = "cli", version = "0.3.0" }
mollusk-svm-error = { path = "error", version = "0.3.0" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.3.0" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0.3.0" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0.3.0" }
mollusk-svm-keys = { path = "keys", version = "0.3.0" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0.3.0" }
mollusk-svm-result = { path = "result", version = "0.3.0" }
mollusk-svm-programs-token = { path = "programs/token", version = "0.3.0" }
num-format = "0.4.4"
openssl = "0.10.72"
prost = "0.9"
prost-build = "0.9"
prost-types = "0.9"
rand0-7 = { package = "rand", version = "0.7" }
rayon = "1.10.0"
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
serial_test = "2.0"
solana-account = "2.2"
solana-account-info = "2.2"
solana-bpf-loader-program = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
solana-clock = "2.2"
solana-compute-budget = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
solana-cpi = "2.2"
solana-ed25519-program = "2.2"
solana-epoch-rewards = "2.2"
solana-epoch-schedule = "2.2"
solana-hash = "2.2"
solana-instruction = "2.2"
solana-keccak-hasher = "2.2"
solana-loader-v3-interface = "3.0"
solana-loader-v4-interface = "2.2"
solana-log-collector = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
solana-logger = "2.3"
solana-native-token = "2.2"
solana-precompile-error = "2.2"
solana-program-entrypoint = "2.2"
solana-program-error = "2.2"
solana-program-runtime = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
solana-pubkey = "2.2"
solana-rent = "2.2"
solana-sdk-ids = "2.2"
solana-secp256k1-program = "2.2"
solana-secp256r1-program = "2.2"
solana-slot-hashes = "2.2"
solana-stake-interface = "1.0"
solana-stake-program = "2.3"
solana-svm-callback = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
solana-system-interface = { version = "1.0.0", git = "https://github.com/rustopian/system.git", branch = "create-account-prefunded" }
solana-system-program = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
solana-sysvar = "2.2"
solana-sysvar-id = "2.2"
solana-timings = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
solana-transaction-context = { version = "3.0", git = "https://github.com/rustopian/agave.git", branch = "v3.0-create-account-prefunded" }
thiserror = "1.0.64"
tokio = "1.37.0"
which = "=4.4.0"
